update to Chromium 154.0.8037.44
Co-authored-by: Roger Wang <roger@nwjs.io>