@@ -72,6 +72,7 @@ import org.chromium.chrome.browser.history.HistoryDeletionBridge;
 import org.chromium.chrome.browser.homepage.HomepageManager;
 import org.chromium.chrome.browser.incognito.IncognitoTabLauncher;
 import org.chromium.chrome.browser.language.GlobalAppLocaleController;
+import org.chromium.chrome.browser.lifetime.ApplicationLifetime;
 import org.chromium.chrome.browser.locale.LocaleManager;
 import org.chromium.chrome.browser.media.MediaCaptureNotificationServiceImpl;
 import org.chromium.chrome.browser.media.MediaViewerUtils;
@@ -123,7 +124,7 @@ import org.chromium.components.content_capture.PlatformContentCaptureController;
 import org.chromium.components.crash.browser.ChildProcessCrashObserver;
 import org.chromium.components.embedder_support.util.UrlUtilities;
 import org.chromium.components.minidump_uploader.CrashFileManager;
-import org.chromium.components.optimization_guide.proto.HintsProto;
+import org.chromium.components.optimization_guide.proto.HintsProto.OptimizationType;
 import org.chromium.components.policy.CombinedPolicyProvider;
 import org.chromium.components.policy.EnterpriseInfo;
 import org.chromium.components.safe_browsing.SafeBrowsingApiBridge;
@@ -135,6 +136,7 @@ import org.chromium.content_public.browser.SpeechRecognition;
 import org.chromium.net.NetworkChangeNotifier;
 import org.chromium.net.RegistrationPolicyApplicationStatus;
 import org.chromium.ui.accessibility.AccessibilityState;
+import org.chromium.ui.accessibility.ApplicationStatusAccessibilityStateVisibilityManager;
 import org.chromium.ui.base.Clipboard;
 import org.chromium.ui.base.SelectFileDialog;
 import org.chromium.ui.base.WindowAndroid;
@@ -146,7 +148,6 @@ import org.chromium.url.GURL;
 import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Locale;
@@ -214,7 +215,7 @@ public class ProcessInitializationHandler {
      * startup.
      */
     public final void initializePreNative() {
-        try (TraceEvent e =
+        try (TraceEvent _ =
                 TraceEvent.scoped("ProcessInitializationHandler.initializePreNative()")) {
             ThreadUtils.checkUiThread();
             if (mInitializedPreNative) return;
@@ -244,7 +245,7 @@ public class ProcessInitializationHandler {
      * startup.
      */
     public final void initializePreNativeLibraryLoad() {
-        try (TraceEvent e =
+        try (TraceEvent _ =
                 TraceEvent.scoped(
                         "ProcessInitializationHandler.initializePreNativeLibraryLoad()")) {
             ThreadUtils.checkUiThread();
@@ -279,8 +280,12 @@ public class ProcessInitializationHandler {
         warmUpSharedPrefs();
 
         DeviceUtils.updateDeviceSpecificUserAgentSwitch(ContextUtils.getApplicationContext());
+        // ChromeLifetimeController is pure Java and safe to initialize pre-native. It is
+        // initialized early so that ApplicationLifetime.terminate() can restart the process
+        // if a locale change occurs before post-native initialization.
+        ChromeLifetimeController.initialize();
         ApplicationStatus.registerStateListenerForAllActivities(
-                (activity, newState) -> {
+                (_, newState) -> {
                     if (newState == ActivityState.CREATED || newState == ActivityState.DESTROYED) {
                         // When the app locale is overridden a change in system locale will not
                         // effect Chrome's UI language. There is race condition where the initial
@@ -292,8 +297,15 @@ public class ProcessInitializationHandler {
                         // RTL, where stale natively-loaded resources are not reloaded
                         // (http://crbug.com/41215786).
                         if (!mInitialLocale.equals(Locale.getDefault())) {
-                            Log.e(TAG, "Killing process because of locale change.");
-                            Process.killProcess(Process.myPid());
+                            // See http://crbug.com/545907093 for why we restart when the user
+                            // changes the locale within Chrome.
+                            if (ApplicationLifetime.shouldRestartForLocaleSwitch()) {
+                                Log.e(TAG, "Restarting process because of settings locale change.");
+                                ApplicationLifetime.terminate(/* restart= */ true);
+                            } else {
+                                Log.e(TAG, "Killing process because of OS locale change.");
+                                Process.killProcess(Process.myPid());
+                            }
                         }
                     }
                 });
@@ -305,10 +317,7 @@ public class ProcessInitializationHandler {
      */
     private void warmUpSharedPrefs() {
         PostTask.postTask(
-                TaskTraits.BEST_EFFORT_MAY_BLOCK,
-                () -> {
-                    DownloadManagerService.warmUpSharedPrefs();
-                });
+                TaskTraits.BEST_EFFORT_MAY_BLOCK, DownloadManagerService::warmUpSharedPrefs);
     }
 
     /**
@@ -394,13 +403,10 @@ public class ProcessInitializationHandler {
         ProfileManagerUtils.removeSessionCookiesForAllProfiles();
         AppBannerManager.setAppDetailsDelegate(
                 assumeNonNull(ServiceLoaderUtil.maybeCreate(AppDetailsDelegate.class)));
-        ChromeLifetimeController.initialize();
         Clipboard.getInstance().setImageFileProvider(new ClipboardImageFileProvider());
 
         DecoderServiceHost.setIntentSupplier(
-                () -> {
-                    return new Intent(ContextUtils.getApplicationContext(), DecoderService.class);
-                });
+                () -> new Intent(ContextUtils.getApplicationContext(), DecoderService.class));
 
         SelectFileDialog.setPhotoPickerDelegate(
                 (windowAndroid, listener, allowMultiple, mimeTypes) -> {
@@ -520,10 +526,8 @@ public class ProcessInitializationHandler {
         TraceEvent.begin("NetworkChangeNotifier.init");
         // Enable auto-detection of network connectivity state changes.
         NetworkChangeNotifier.init();
-        boolean forceUpdateNetworkState =
-                !ChromeFeatureList.sUseInitialNetworkStateAtStartup.isEnabled();
         NetworkChangeNotifier.setAutoDetectConnectivityState(
-                new RegistrationPolicyApplicationStatus(), forceUpdateNetworkState);
+                new RegistrationPolicyApplicationStatus());
         TraceEvent.end("NetworkChangeNotifier.init");
     }
 
@@ -708,7 +712,11 @@ public class ProcessInitializationHandler {
         tasks.add(PersistedTabData::onDeferredStartup);
 
         // Asynchronously query system accessibility state so it is ready for clients.
-        tasks.add(AccessibilityState::initializeOnStartup);
+        tasks.add(
+                () -> {
+                    AccessibilityState.initializeOnStartup(
+                            new ApplicationStatusAccessibilityStateVisibilityManager());
+                });
         tasks.add(TabPersistentStoreImpl::onDeferredStartup);
         tasks.add(
                 () -> {
@@ -745,7 +753,7 @@ public class ProcessInitializationHandler {
                         // OptimizationTypes which we give a guarantee will be registered when we
                         // pass the onDeferredStartup() signal to OptimizationGuide.
                         optimizationGuideBridge.registerOptimizationTypes(
-                                Arrays.asList(HintsProto.OptimizationType.PRICE_TRACKING));
+                                List.of(OptimizationType.PRICE_TRACKING));
                         optimizationGuideBridge.onDeferredStartup();
                     }
                     // TODO(crbug.com/40236066) Move to PersistedTabData.onDeferredStartup
@@ -914,7 +922,7 @@ public class ProcessInitializationHandler {
 
             /**
              * Returns whether or not it's appropriate to try to extract recent logcat output and
-             * include that logcat output alongside the given {@param minidump} in a crash report.
+             * include that logcat output alongside the given {@code minidump} in a crash report.
              * Logcat output should only be extracted if (a) it hasn't already been extracted for
              * this minidump file, and (b) the minidump is fairly fresh. The freshness check is
              * important for two reasons: (1) First of all, it helps avoid including irrelevant
